src/main/java/com/example/DiplomaSite/error/DiplomaThesisNotFoundException.java
package com.example.DiplomaSite.error;

public class DiplomaThesisNotFoundException extends RuntimeException{
    public DiplomaThesisNotFoundException(String message) {
        super(message);
    }
}
